# libtrash

./: Cargo.toml  README.md
include/: trash.h
src/: lib.rs
